--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The site/webapp/page/whatever description">
     <meta name="author" content="Nicolás J. Engler">
 
-    <link rel="stylesheet" href="dist/css/all.css?v=1.0">
+    <link rel="stylesheet" href="css/all.css?v=1.0">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -15,6 +15,6 @@
   </head>
 
   <body>
-    <script src="dist/scripts/all.js"></script>
+    <script src="scripts/all.js"></script>
   </body>
 </html>
